# cargo-pyinit

./: Cargo.toml  LICENSE-MIT  README.md
src/: __init__.py.in  main.rs  pylib.rs.in  setup.py.in
