[package]
name = "cargo-pyinit"
version = "0.1.3"
authors = ["Rex Lunae <rexlunae@gmail.com>"]
edition = "2021"
description = "A cargo plugin to make it easier to write and convert crates into Python extension modules."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rexlunae/cargo-pyinit"
repository = "https://github.com/rexlunae/cargo-pyinit.git"
keywords = ["rust", "cargo", "python"]
readme = "README.md"

[dependencies]
cargo_toml = "0.10"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"]}
serde = "1.0"
simple_logger = "1.13.0"
clap = "2.33.3"
tinytemplate = "1.2"
serde_derive = "1.0"
regex = "1.5"

